2006-02-24  Sven Panne  <sven.panne@aedion.de>

	* src/al_source.c: Removed the rather obscure feature of being able to
	initialise the source rolloff factor attributes via a configuration file
	variable "source-rolloff-factor". If we want such a feature, it should
	be handled via a more general way for all source/listener/...
	attributes.

	* src/al_filter.c: Previously, the source position used for attenuating
	non-directional sources was the listener position. This is wrong, it
	should be (0,0,0).

	* src/backends/alc_backend_esd.c: Open connection to EsounD daemon only
	once. More simplifications.

2006-02-22  Sven Panne  <sven.panne@aedion.de>

	* admin/autotools/.indent.pro, configure.ac,
	src/backends/alc_backend_esd.c: Heavily cleaned up EsounD backend.

2006-02-21  Erik Hofman <erik@ehofman.com>

	* src/backends/alc_backend.h, src/backends/alc_backend_irix.c: Fix the
	IRIX backend again.

	* src/backends/alc_backend_wave.c: (const void *) to (void *)
	conversion.

2006-02-21  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: bump version

2006-02-21  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, src/Makefile.am: Added version info and bumped it
	from the default 0:0:0 to 1:0:0, because ALUT has been removed.

2006-02-20  Sven Panne  <sven.panne@aedion.de>

	* admin/autotools/.indent.pro, src/al_types.h, src/alc/alc_context.c,
	src/alc/alc_device.c, src/backends/alc_backend.c,
	src/backends/alc_backend.h, src/extensions/al_ext_loki.c: Finally moved
	the backend-related stuff (i.e. the function table and the private data)
	cleanly into the device structure.

2006-02-17  Sven Panne  <sven.panne@aedion.de>

	* src/backends/alc_backend.c, src/backends/alc_backend.h,
	src/backends/alc_backend_alsa.c, src/backends/alc_backend_arts.c,
	src/backends/alc_backend_bsd.c, src/backends/alc_backend_darwin.c,
	src/backends/alc_backend_esd.c, src/backends/alc_backend_irix.c,
	src/backends/alc_backend_linux.c, src/backends/alc_backend_morphos.c,